added Magic Kernel Sharp 2021 rescaler via VIPS